tdf#148569 set extra drawing constraints when scaling

Previously, setting stroke width and cap was only done when running
unit tests. But the same drawing contraints are necessary when running
with a Retina display on macOS.

Change-Id: I74f7347d30a410f7d3485388ffec61b32730b948
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168973
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>